--- a/src/lang/en-us/common.json
+++ b/src/lang/en-us/common.json
@@ -3,6 +3,9 @@
   "btn_text_more": "More",
   "text_btn_read_more": "Read More",
   "text_btn_read_less": "Read Less",
+  "btn_show_more": "Show more",
+  "btn_show_less": "Show less",
+  "btn_earn_now": "Earn Now",
   "game_fi_crptos": "GameFi Cryptos",
   "exchanges": "Exchanges",
   "market_cap": "Market Cap",
@@ -55,5 +58,44 @@
   "1y": "1y",
   "tags": "Tags",
   "info": "Info",
-  "view_all": "View all"
+  "view_all": "View all",
+  "market_cap_tip": "The total market value of a cryptocurrency's circulating supply. It is analogous to the free-float capitalization in the stock market.<br><br> Market Cap = Current Price x Circulating Supply",
+  "fd_market_cap": "Fully Diluted Market Cap",
+  "fd_market_cap_tip": "The market cap if the max supply was in circulation.<br><br> Fully-diluted market cap (FDMC) = price x max supply. If max supply is null, FDMC = price x total supply. if max supply and total supply are infinite or not available, fully-diluted market cap shows.",
+  "volume": "Volume",
+  "volume_tip": "A measure of how much of a cryptocurrency was traded in the last 24 hours.",
+  "vol_market_cap": "Volume / Market Cap",
+  "circulating_supply": "Circulating Supply",
+  "circulating_supply_tip": "The amount of coins that are circulating in the market and are in public hands. It is analogous to the flowing shares in the stock market.",
+ "max_supply": "Max Supply",
+ "max_supply_tip": "The maximum amount of coins that will ever exist in the lifetime of the cryptocurrency. It is analogous to the fully diluted shares in the stock market.<br><br> If this data has not been submitted by the project or verified by the CMC team, max supply shows.",
+ "total_supply": "Total Supply",
+ "total_supply_tip": "The amount of coins that have been already created, minus any coins that have been burned. It is analogous to the outstanding shares in the stock market.<br><br> If this data has not been submitted by the project or verified by the CMC team, total supply shows",
+ "overview": "Overview",
+ "market": "Market",
+ "chart_usd_title": "{fullname} to USD Chart",
+ "price_statistics": "{coin} Price Statistics",
+ "price_today": "{fullname} Price Today",
+ "price": "Price",
+ "price_change": "Price Change",
+ "24h_low_high": "24h Low / 24h High",
+ "trading_volume": "Trading Volume",
+ "market_dominance": "Market Dominance",
+ "market_rank": "Market Rank",
+ "price_yesterday": "{fullname} Price Yesterday",
+ "yesterday_lh": "Yesterday's Low / High",
+ "yesterday_oc": "Yesterday's Open / Close",
+ "yesterday_change": "Yesterday's Change",
+ "yesterday_vol": "Yesterday's Volume",
+ "price_history": "{fullname} Price History",
+ "7d_lh": "7d Low / 7d High",
+ "30d_lh": "30d Low / 30d High",
+ "90d_lh": "90d Low / 90d High",
+ "52w_lh": "52 Week Low / 52 Week High",
+ "all_time_high": "All Time High",
+ "all_time_low": "All Time Low",
+ "coin_roi": "{fullname} ROI",
+ "coin_supply": "{fullname} Supply",
+ "trending_title": "Trending Coins and Tokens",
+ "to_converter": "{coin} to USD Converter"
 }
