--- a/src/lang/en-us/common.json
+++ b/src/lang/en-us/common.json
@@ -6,6 +6,9 @@
   "btn_show_more": "Show more",
   "btn_show_less": "Show less",
   "btn_earn_now": "Earn Now",
+  "tag_low": "Low",
+  "tag_moderate": "Moderate",
+  "tag_high": "High",
   "game_fi_crptos": "GameFi Cryptos",
   "exchanges": "Exchanges",
   "market_cap": "Market Cap",
@@ -28,9 +31,16 @@
   "th_1h": "1h",
   "th_24h": "24h",
   "th_7d": "7d",
-  "th_vol": "Volume(24h)",
+  "th_vol24": "Volume(24h)",
   "th_mkt_cap": "MKT Cap",
   "th_last_7d": "Last 7Days",
+  "th_pairs": "Pairs",
+  "th_source": "Source",
+  "th_depth": "+2% Depth",
+  "th_vol": "Volume",
+  "th_confidence": "Confidence",
+  "th_liquidity": "Liquidity",
+  "th_updated" :"Updated",
   "page_info": "Showing 1 - {size} out of {total}",
   "work_info": "Find out how we work by clicking here.",
   "work_info_text": "<h3>Today’s Cryptocurrency Prices, Charts and Data</h3> <p> Welcome to AAMC.com! This site was founded in May 2013 by Brandon Chez to provide up-to-date cryptocurrency prices, charts and data about the emerging cryptocurrency markets. Since then, the world of blockchain and cryptocurrency has grown exponentially and we are very proud to have grown with it. We take our data very seriously and we do not change our data to fit any narrative: we stand for accurately, timely and unbiased information. </p> <h3>All Your Crypto Market Data Needs in One Place</h3> <p> Here at AAMC, we work very hard to ensure that all the relevant and up-to-date information about cryptocurrencies, coins and tokens can be located in one easily discoverable place. From the very first day, the goal was for the site to be the number one location online for crypto market data, and we work hard to empower our users with our unbiased and accurate information. </p> <h3>We Provide Live and Historic Crypto Charts for Free</h3> <p> Each of our coin data pages has a graph that shows both the current and historic price information for the coin or token. Normally, the graph starts at the launch of the asset, but it is possible to select specific to and from dates to customize the chart to your own needs. These charts and their information are free to visitors of our website. </p> <h3>How Do We Calculate Our Cryptocurrency Prices?</h3> <p> We receive updated cryptocurrency prices directly from many exchanges based on their pairs. We then convert the number to USD.</p> <h3> How Do We Calculate Our Crypto Valuations?</h3> <p> We calculate our valuations based on the total circulating supply of an asset multiplied by the currency reference price.</p> <h3>How Do We Calculate the Cryptocurrency Market Cap?</h3> <p> We calculate the total cryptocurrency market capitalization as the sum of all cryptocurrencies listed on the site. </p> <h3>Does AAMC.com List All Cryptocurrencies?</h3> <p> No, we do not list all cryptocurrencies at AAMC. As a company and team, we are very aware that not all coins and projects have good intentions. While we cannot guarantee to exclude them all, we have a vetting process that each coin goes through before it is listed on the site. If we suspect that a coin or project is a scam, it does not get listed. </p> <h3>How Big Is the Global Coin Market?</h3> <p> At the time of writing, we estimate that there are around 8,000 coins, tokens and projects in the global coin market. As mentioned above, we have a due diligence process that we apply to new coins before they are listed. This process controls how many of the cryptocurrencies from the global market are represented on our site. </p> <h3> What Is an Altcoin?</h3> <p> The very first cryptocurrency was Bitcoin. Since it is open source, it is possible for other people to use the majority of the code, make a few changes and then launch their own separate currency. Many people have done exactly this. Some of these coins are very similar to Bitcoin, with just one or two amended features (such as Litecoin), while others are very different, with varying models of security, issuance and governance. However, they all share the same moniker — every coin issued after Bitcoin is considered to be an altcoin. </p> <h3> What Is an ICO?</h3> <p> ICO stands for initial coin offering. Many of the smaller projects in the crypto space — and a few of the largest ones — raised money from private investors around the world in the crypto equivalent of a crowdfunding campaign. Investors would send funds — usually in the form of Bitcoin — to the project and receive coin or tokens in return.<br> Most ICOs happened in 2017 and early 2018 and used Ethereum as a platform of operation via the ERC-20 standard. In 2018, the United States Securities and Exchange Commission (SEC) clarified their rules relating to fundraising for assets, which made it much harder for new cryptocurrency projects to issue their own tokens in this way. Since the appearance of the SEC guidance and the organization’s heightened interest in regulating ICOs for U.S. citizens, the number of ICOs has been reduced substantially. </p> <h3> What Is a Stablecoin?</h3> <p> Price volatility has long been one of the features of the cryptocurrency market. When asset prices move quickly in either direction and the market itself is relatively thin, it can sometimes be difficult to conduct transactions as might be needed. To overcome this problem, a new type of cryptocurrency tied in value to existing currencies — ranging from the U.S. dollar, other fiats or even other cryptocurrencies — arose. These new cryptocurrency are known as stablecoins, and they can be used for a multitude of purposes due to their stability. </p> <h3>Which Is the Best Cryptocurrency to Invest in? </h3> <p> AAMC does not offer financial or investment advice about which cryptocurrency, token or asset does or does not make a good investment, nor do we offer advice about the timing of purchases or sales. We are strictly a data company. <br> Please remember that the prices, yields and values of financial assets change. This means that any capital you may invest is at risk. We recommend seeking the advice of a professional investment advisor for guidance related to your personal circumstances. </p> <h3>If You Are Investing in Cryptocurrency — AAMC.com Is for You</h3> <p> The data at AAMC updates throughout the day, which means that it is possible to check in on the value of your investments and assets at any time and from anywhere in the world. We look forward to seeing you regularly! </p>",
@@ -97,5 +107,13 @@
  "coin_roi": "{fullname} ROI",
  "coin_supply": "{fullname} Supply",
  "trending_title": "Trending Coins and Tokens",
- "to_converter": "{coin} to USD Converter"
+ "to_converter": "{coin} to USD Converter",
+ "price_live_data": "{coin} Price Live Data",
+ "market_title": "{fullname} Markets",
+ "see_all_markets": "See All Markets",
+ "tip_confidence_indicator": "Confidence Indicator",
+ "th_confidence_tip": "CoinMarketCap algorithmically compares the Reported Volume of exchanges against our data model. The Confidence Indicator indicates the level of confidence we have that the Reported Volume is accurate.<br><br> Confidence Indicator reports a number from 0% to 100%, and are categorized into bands:",
+ "th_liquidity_tip_title": "Liquidity Score",
+ "th_liquidity_tip_con": "Liquidity scores a market pair from 0 to 1000 based on the slippage incurred by various order sizes. A higher score indicates a more liquid market.",
+ "news_title": "{fullname} News"
 }
