--- a/src/lang/en-us/common.json
+++ b/src/lang/en-us/common.json
@@ -3,9 +3,14 @@
   "btn_text_more": "More",
   "text_btn_read_more": "Read More",
   "text_btn_read_less": "Read Less",
+  "text_btn_full_definition": "Full definition",
   "btn_show_more": "Show more",
   "btn_show_less": "Show less",
   "btn_earn_now": "Earn Now",
+  "btn_load_more": "Load More",
+  "btn_subscribe": "Subscribe",
+  "btn_see_all": "See All",
+  "btn_contact_us": "Contact Us",
   "tag_low": "Low",
   "tag_moderate": "Moderate",
   "tag_high": "High",
@@ -115,5 +120,31 @@
  "th_confidence_tip": "CoinMarketCap algorithmically compares the Reported Volume of exchanges against our data model. The Confidence Indicator indicates the level of confidence we have that the Reported Volume is accurate.<br><br> Confidence Indicator reports a number from 0% to 100%, and are categorized into bands:",
  "th_liquidity_tip_title": "Liquidity Score",
  "th_liquidity_tip_con": "Liquidity scores a market pair from 0 to 1000 based on the slippage incurred by various order sizes. A higher score indicates a more liquid market.",
- "news_title": "{fullname} News"
+ "news_title": "{fullname} News",
+ "learn_sub_title": "Find what fascinates you as you explore crypto",
+ "learn_email_ph": "Enter your email address",
+ "learn_title_article": "Latest Articles",
+ "learn_title_crypto": "Lost in all the crypto slang?",
+ "learn_subtitle_crypto": "We currently have 861 terms. How many do you know so far?",
+ "learn_about_aamc": "What's new with AAMC?",
+ "learn_tab_all": "All",
+ "learn_tab_announcements": "Announcements",
+ "learn_tab_explorer": "Feature Explorer",
+ "learn_tab_marketing": "Marketing",
+ "learn_our_mission": "Our Mission",
+ "learn_articles": "Articles",
+ "learn_terms": "Glossary Terms",
+ "learn_auth": "Authors",
+ "learn_our_desc": "The Library of Alexandria was the world’s first known attempt to create a universal library, one place to store all of the knowledge that existed and could be collected at the time. In fact, the creators of the library once wrote that they wanted to “collect, if possible, all the books in the world.” With that in mind, CoinMarketCap has founded CoinMarketCap Alexandria. Unlike the Library of Alexandria, which reportedly searched all incoming ships for books to take for its physical collection, Alexandria will house online both content about crypto written by our own researchers.<br><br> While CoinMarketCap Alexandria cannot claim to cover all of the existing knowledge of the cryptocurrency space, we are starting our online library with the same lofty goal of those original Library of Alexandria founders back in the second century BCE: \"to collect, if possible, all of the information about cryptocurrency in the world.\"",
+ "about_us_desc": "Founded in 2021, the company's team comes from major blockchain companies and investment institutions. The founders are particularly experienced in overseas market operations and investment. Committed to providing services such as Chain Game Association, Chain Game Data Platform, Chain Game Investment Incubation and other services for the international market. Various branches around the world are under construction, including but not limited to California, Germany, Berlin, Singapore, Hong Kong, London, UK and other places.",
+ "au_products_services": "Products & Services",
+ "au_ps_t1": "Chain Tour Home",
+ "au_ps_desc1": "Publish a chain game data portal website to provide professional chain game data analysis, tracking, research reports, game strategies, IGO information and other one-stop services for guilds, gold owners, players, investment institutions, etc.",
+ "au_ps_t2": "investment  management",
+ "au_ps_desc2": "Primary market investment for blockchain and metaverse industries.",
+ "au_ps_t3": "Chain Game Incubation",
+ "au_ps_desc3": "Provide one-stop game chain reform incubation services such as economic model design, blockchain technology, investment, and overseas distribution for traditional game development teams.",
+ "au_investors": "Investors",
+ "au_partner": "Partner",
+ "au_footer_desc": "If you have any questions, please feel free to contact us, and we will reply within 1 to 3 working days."
 }
