--- a/src/lang/en-us/common.json
+++ b/src/lang/en-us/common.json
@@ -11,6 +11,7 @@
   "btn_subscribe": "Subscribe",
   "btn_see_all": "See All",
   "btn_contact_us": "Contact Us",
+  "btn_link_wallet": "Link wallet",
   "tag_low": "Low",
   "tag_moderate": "Moderate",
   "tag_high": "High",
@@ -25,10 +26,13 @@
   "fast": "Fast",
   "powered_by_etherscan": "Powered by Etherscan",
   "nav_home": "Home",
+  "nav_infor": "Infor",
   "nav_information": "Information",
   "nav_strategy": "Strategy",
   "nav_learn": "Learn",
   "nav_about_us": "About us",
+  "lang_popular": "Popular languages",
+  "lang_all": "All languages",
   "menu_game": "Game",
   "menu_token": "Token",
   "th_coin": "Coin",
