--- a/src/lang/en-us/common.json
+++ b/src/lang/en-us/common.json
@@ -46,11 +46,11 @@
   "th_mkt_cap": "MKT Cap",
   "th_last_7d": "Last 7Days",
   "th_pairs": "Pairs",
-  "th_source": "Source",
-  "th_depth": "+2% Depth",
+  "th_exchange": "Exchange",
+  "th_spread": "Spread",
+  "th_depth": "Depth",
   "th_vol": "Volume",
   "th_confidence": "Confidence",
-  "th_liquidity": "Liquidity",
   "th_updated" :"Updated",
   "page_info": "Showing 1 - {size} out of {total}",
   "work_info": "Find out how we work by clicking here.",
@@ -86,7 +86,7 @@
  "price_yesterday": "{fullname} Price Yesterday",
  "yesterday_lh": "Yesterday's Low / High",
  "yesterday_oc": "Yesterday's Open / Close",
- "yesterday_change": "Yesterday's Change",
+ "yesterday_mc": "Yesterday's Market Cap",
  "yesterday_vol": "Yesterday's Volume",
  "price_history": "{fullname} Price History",
  "7d_lh": "7d Low / 7d High",
@@ -99,13 +99,13 @@
  "coin_supply": "{fullname} Supply",
  "trending_title": "Trending Coins and Tokens",
  "to_converter": "{coin} to USD Converter",
- "price_live_data": "{coin} Price Live Data",
+ "coin_price_title": "{fullname} Coin Price & Market Data",
+ "coin_price_desc": "<b>{fullname} price</b> today is {currency} with a 24-hour trading volume of {vol}. {symbol} price is up {change} in the last 24 hours. It has a circulating supply of <b>{circulating}</b> {symbol} coins and a total supply of <b>{total}</b>. If you are looking to buy or sell {symbol} a Inu, {exchange} is currently the most active exchange.",
+ "what_is_coin": "What is {fullname} token?",
  "market_title": "{fullname} Markets",
  "see_all_markets": "See All Markets",
  "tip_confidence_indicator": "Confidence Indicator",
- "th_confidence_tip": "CoinMarketCap algorithmically compares the Reported Volume of exchanges against our data model. The Confidence Indicator indicates the level of confidence we have that the Reported Volume is accurate.<br><br> Confidence Indicator reports a number from 0% to 100%, and are categorized into bands:",
- "th_liquidity_tip_title": "Liquidity Score",
- "th_liquidity_tip_con": "Liquidity scores a market pair from 0 to 1000 based on the slippage incurred by various order sizes. A higher score indicates a more liquid market.",
+ "th_confidence_tip": "Popfun algorithmically compares the Reported Volume of exchanges against our data model. The Confidence Indicator indicates the level of confidence we have that the Reported Volume is accurate.<br><br> Confidence Indicator reports a number from 0% to 100%, and are categorized into bands:",
  "news_title": "{fullname} News",
  "learn_sub_title": "Find what fascinates you as you explore crypto",
  "learn_email_ph": "Enter your email address",
@@ -121,7 +121,7 @@
  "learn_articles": "Articles",
  "learn_terms": "Glossary Terms",
  "learn_auth": "Authors",
- "learn_our_desc": "The Library of Alexandria was the world’s first known attempt to create a universal library, one place to store all of the knowledge that existed and could be collected at the time. In fact, the creators of the library once wrote that they wanted to “collect, if possible, all the books in the world.” With that in mind, CoinMarketCap has founded CoinMarketCap Alexandria. Unlike the Library of Alexandria, which reportedly searched all incoming ships for books to take for its physical collection, Alexandria will house online both content about crypto written by our own researchers.<br><br> While CoinMarketCap Alexandria cannot claim to cover all of the existing knowledge of the cryptocurrency space, we are starting our online library with the same lofty goal of those original Library of Alexandria founders back in the second century BCE: \"to collect, if possible, all of the information about cryptocurrency in the world.\"",
+ "learn_our_desc": "The Library of Alexandria was the world’s first known attempt to create a universal library, one place to store all of the knowledge that existed and could be collected at the time. In fact, the creators of the library once wrote that they wanted to “collect, if possible, all the books in the world.” With that in mind, Popfun has founded Popfun Alexandria. Unlike the Library of Alexandria, which reportedly searched all incoming ships for books to take for its physical collection, Alexandria will house online both content about crypto written by our own researchers.<br><br> While Popfun Alexandria cannot claim to cover all of the existing knowledge of the cryptocurrency space, we are starting our online library with the same lofty goal of those original Library of Alexandria founders back in the second century BCE: \"to collect, if possible, all of the information about cryptocurrency in the world.\"",
  "about_us_desc": "Founded in 2021, the company's team comes from major blockchain companies and investment institutions. The founders are particularly experienced in overseas market operations and investment. Committed to providing services such as Chain Game Association, Chain Game Data Platform, Chain Game Investment Incubation and other services for the international market. Various branches around the world are under construction, including but not limited to California, Germany, Berlin, Singapore, Hong Kong, London, UK and other places.",
  "au_products_services": "Products & Services",
  "au_ps_t1": "Chain Tour Home",
