--- a/src/lang/en-us/common.json
+++ b/src/lang/en-us/common.json
@@ -109,7 +109,7 @@
  "news_title": "{fullname} News",
  "learn_sub_title": "Find what fascinates you as you explore crypto",
  "learn_email_ph": "Enter your email address",
- "learn_title_article": "Latest Articles",
+ "learn_title_article": "Articles",
  "learn_title_crypto": "Lost in all the crypto slang?",
  "learn_subtitle_crypto": "We currently have 861 terms. How many do you know so far?",
  "learn_about_aamc": "What's new with AAMC?",
