--- a/src/lang/en-us/common.json
+++ b/src/lang/en-us/common.json
@@ -132,5 +132,8 @@
  "au_ps_desc3": "Provide one-stop game chain reform incubation services such as economic model design, blockchain technology, investment, and overseas distribution for traditional game development teams.",
  "au_investors": "Investors",
  "au_partner": "Partner",
- "au_footer_desc": "If you have any questions, please feel free to contact us, and we will reply within 1 to 3 working days."
+ "au_footer_desc": "If you have any questions, please feel free to contact us, and we will reply within 1 to 3 working days.",
+ "detail": "Detail",
+ "created": "Created",
+ "last_updated": "Last Updated"
 }
