fix: 首页和关于我们banner调整

--- a/src/lang/en-us/common.json
+++ b/src/lang/en-us/common.json
@@ -122,6 +122,7 @@
  "learn_terms": "Glossary Terms",
  "learn_auth": "Authors",
  "learn_our_desc": "The Library of Alexandria was the world’s first known attempt to create a universal library, one place to store all of the knowledge that existed and could be collected at the time. In fact, the creators of the library once wrote that they wanted to “collect, if possible, all the books in the world.” With that in mind, Popfun has founded Popfun Alexandria. Unlike the Library of Alexandria, which reportedly searched all incoming ships for books to take for its physical collection, Alexandria will house online both content about crypto written by our own researchers.<br><br> While Popfun Alexandria cannot claim to cover all of the existing knowledge of the cryptocurrency space, we are starting our online library with the same lofty goal of those original Library of Alexandria founders back in the second century BCE: \"to collect, if possible, all of the information about cryptocurrency in the world.\"",
+ "about_us_title": "Create New World in the Metaverse",
  "about_us_desc": "Founded in 2021, the company's team comes from major blockchain companies and investment institutions. The founders are particularly experienced in overseas market operations and investment. Committed to providing services such as Chain Game Association, Chain Game Data Platform, Chain Game Investment Incubation and other services for the international market. Various branches around the world are under construction, including but not limited to California, Germany, Berlin, Singapore, Hong Kong, London, UK and other places.",
  "au_products_services": "Products & Services",
  "au_ps_t1": "Chain Tour Home",
@@ -135,5 +136,6 @@
  "au_footer_desc": "If you have any questions, please feel free to contact us, and we will reply within 1 to 3 working days.",
  "detail": "Detail",
  "created": "Created",
- "last_updated": "Last Updated"
+ "last_updated": "Last Updated",
+ "submited_email_reault": "Thanks for signing up! Check your email to confirm your subscription!"
 }
