--- a/src/lang/en-us/common.json
+++ b/src/lang/en-us/common.json
@@ -28,6 +28,8 @@
   "fast": "Fast",
   "powered_by_etherscan": "Powered by Etherscan",
   "nav_home": "Home",
+  "nav_igo": "IGO",
+  "nav_nft": "NFT Market",
   "nav_infor": "Infor",
   "nav_information": "Information",
   "nav_strategy": "Strategy",
@@ -37,8 +39,18 @@
   "lang_all": "All languages",
   "menu_game": "Game",
   "menu_token": "Token",
-  "th_coin": "Coin",
+  "menu_guild": "Guild",
+  "menu_chain": "Chain",
+  "th_game": "Game",
+  "th_coin": "token",
+  "th_guild": "Guild",
+  "th_members": "Members",
+  "th_address": "Address",
+  "th_token": "Token",
+  "th_chain": "Chain",
   "th_price": "Price",
+  "th_assets": "Assets",
+  "th_fdv": "FDV",
   "th_1h": "1h",
   "th_24h": "24h",
   "th_7d": "7d",
@@ -49,6 +61,7 @@
   "th_exchange": "Exchange",
   "th_spread": "Spread",
   "th_depth": "Depth",
+  "th_popularity": "Popularity",
   "th_vol": "Volume",
   "th_confidence": "Confidence",
   "th_updated" :"Updated",
