--- a/src/lang/en-us/common.json
+++ b/src/lang/en-us/common.json
@@ -42,7 +42,7 @@
   "menu_guild": "Guild",
   "menu_chain": "Chain",
   "th_game": "Game",
-  "th_coin": "token",
+  "th_coin": "Coin",
   "th_guild": "Guild",
   "th_members": "Members",
   "th_address": "Address",
@@ -64,7 +64,7 @@
   "th_popularity": "Popularity",
   "th_vol": "Volume",
   "th_confidence": "Confidence",
-  "th_updated" :"Updated",
+  "th_updated": "Updated",
   "page_info": "Showing 1 - {size} out of {total}",
   "work_info": "Find out how we work by clicking here.",
   "work_info_text": "<h3>Today’s Cryptocurrency Prices, Charts and Data</h3> <p> Welcome to AAMC.com! This site was founded in May 2013 by Brandon Chez to provide up-to-date cryptocurrency prices, charts and data about the emerging cryptocurrency markets. Since then, the world of blockchain and cryptocurrency has grown exponentially and we are very proud to have grown with it. We take our data very seriously and we do not change our data to fit any narrative: we stand for accurately, timely and unbiased information. </p> <h3>All Your Crypto Market Data Needs in One Place</h3> <p> Here at AAMC, we work very hard to ensure that all the relevant and up-to-date information about cryptocurrencies, coins and tokens can be located in one easily discoverable place. From the very first day, the goal was for the site to be the number one location online for crypto market data, and we work hard to empower our users with our unbiased and accurate information. </p> <h3>We Provide Live and Historic Crypto Charts for Free</h3> <p> Each of our coin data pages has a graph that shows both the current and historic price information for the coin or token. Normally, the graph starts at the launch of the asset, but it is possible to select specific to and from dates to customize the chart to your own needs. These charts and their information are free to visitors of our website. </p> <h3>How Do We Calculate Our Cryptocurrency Prices?</h3> <p> We receive updated cryptocurrency prices directly from many exchanges based on their pairs. We then convert the number to USD.</p> <h3> How Do We Calculate Our Crypto Valuations?</h3> <p> We calculate our valuations based on the total circulating supply of an asset multiplied by the currency reference price.</p> <h3>How Do We Calculate the Cryptocurrency Market Cap?</h3> <p> We calculate the total cryptocurrency market capitalization as the sum of all cryptocurrencies listed on the site. </p> <h3>Does AAMC.com List All Cryptocurrencies?</h3> <p> No, we do not list all cryptocurrencies at AAMC. As a company and team, we are very aware that not all coins and projects have good intentions. While we cannot guarantee to exclude them all, we have a vetting process that each coin goes through before it is listed on the site. If we suspect that a coin or project is a scam, it does not get listed. </p> <h3>How Big Is the Global Coin Market?</h3> <p> At the time of writing, we estimate that there are around 8,000 coins, tokens and projects in the global coin market. As mentioned above, we have a due diligence process that we apply to new coins before they are listed. This process controls how many of the cryptocurrencies from the global market are represented on our site. </p> <h3> What Is an Altcoin?</h3> <p> The very first cryptocurrency was Bitcoin. Since it is open source, it is possible for other people to use the majority of the code, make a few changes and then launch their own separate currency. Many people have done exactly this. Some of these coins are very similar to Bitcoin, with just one or two amended features (such as Litecoin), while others are very different, with varying models of security, issuance and governance. However, they all share the same moniker — every coin issued after Bitcoin is considered to be an altcoin. </p> <h3> What Is an ICO?</h3> <p> ICO stands for initial coin offering. Many of the smaller projects in the crypto space — and a few of the largest ones — raised money from private investors around the world in the crypto equivalent of a crowdfunding campaign. Investors would send funds — usually in the form of Bitcoin — to the project and receive coin or tokens in return.<br> Most ICOs happened in 2017 and early 2018 and used Ethereum as a platform of operation via the ERC-20 standard. In 2018, the United States Securities and Exchange Commission (SEC) clarified their rules relating to fundraising for assets, which made it much harder for new cryptocurrency projects to issue their own tokens in this way. Since the appearance of the SEC guidance and the organization’s heightened interest in regulating ICOs for U.S. citizens, the number of ICOs has been reduced substantially. </p> <h3> What Is a Stablecoin?</h3> <p> Price volatility has long been one of the features of the cryptocurrency market. When asset prices move quickly in either direction and the market itself is relatively thin, it can sometimes be difficult to conduct transactions as might be needed. To overcome this problem, a new type of cryptocurrency tied in value to existing currencies — ranging from the U.S. dollar, other fiats or even other cryptocurrencies — arose. These new cryptocurrency are known as stablecoins, and they can be used for a multitude of purposes due to their stability. </p> <h3>Which Is the Best Cryptocurrency to Invest in? </h3> <p> AAMC does not offer financial or investment advice about which cryptocurrency, token or asset does or does not make a good investment, nor do we offer advice about the timing of purchases or sales. We are strictly a data company. <br> Please remember that the prices, yields and values of financial assets change. This means that any capital you may invest is at risk. We recommend seeking the advice of a professional investment advisor for guidance related to your personal circumstances. </p> <h3>If You Are Investing in Cryptocurrency — AAMC.com Is for You</h3> <p> The data at AAMC updates throughout the day, which means that it is possible to check in on the value of your investments and assets at any time and from anywhere in the world. We look forward to seeing you regularly! </p>",
@@ -85,73 +85,91 @@
   "volume": "Volume",
   "vol_market_cap": "Volume / Market Cap",
   "circulating_supply": "Circulating Supply",
- "max_supply": "Max Supply",
- "total_supply": "Total Supply",
- "overview": "Overview",
- "market": "Market",
- "creator": "Creator",
- "chart_usd_title": "{fullname} to USD Chart",
- "price_statistics": "{coin} Price Statistics",
- "price_today": "{fullname} Price Today",
- "price": "Price",
- "price_change": "Price Change",
- "24h_low_high": "24h Low / 24h High",
- "trading_volume": "Trading Volume",
- "market_dominance": "Market Dominance",
- "market_rank": "Market Rank",
- "price_yesterday": "{fullname} Price Yesterday",
- "yesterday_lh": "Yesterday's Low / High",
- "yesterday_oc": "Yesterday's Open / Close",
- "yesterday_mc": "Yesterday's Market Cap",
- "yesterday_vol": "Yesterday's Volume",
- "price_history": "{fullname} Price History",
- "7d_lh": "7d Low / 7d High",
- "30d_lh": "30d Low / 30d High",
- "90d_lh": "90d Low / 90d High",
- "52w_lh": "52 Week Low / 52 Week High",
- "all_time_high": "All Time High",
- "all_time_low": "All Time Low",
- "coin_roi": "{fullname} ROI",
- "coin_supply": "{fullname} Supply",
- "trending_title": "Trending Coins and Tokens",
- "to_converter": "{coin} to USD Converter",
- "coin_price_title": "{fullname} Coin Price & Market Data",
- "coin_price_desc": "<b>{fullname} price</b> today is {currency} with a 24-hour trading volume of {vol}. {symbol} price is up {change} in the last 24 hours. It has a circulating supply of <b>{circulating}</b> {symbol} coins and a total supply of <b>{total}</b>. If you are looking to buy or sell {symbol} a Inu, {exchange} is currently the most active exchange.",
- "what_is_coin": "What is {fullname} token?",
- "market_title": "{fullname} Markets",
- "see_all_markets": "See All Markets",
- "tip_confidence_indicator": "Confidence Indicator",
- "th_confidence_tip": "Popfun algorithmically compares the Reported Volume of exchanges against our data model. The Confidence Indicator indicates the level of confidence we have that the Reported Volume is accurate.<br><br> Confidence Indicator reports a number from 0% to 100%, and are categorized into bands:",
- "news_title": "{fullname} News",
- "learn_sub_title": "Find what fascinates you as you explore crypto",
- "learn_email_ph": "Enter your email address",
- "learn_title_article": "Articles",
- "learn_title_crypto": "Lost in all the crypto slang?",
- "learn_subtitle_crypto": "We currently have 861 terms. How many do you know so far?",
- "learn_about_aamc": "What's new with AAMC?",
- "learn_tab_all": "All",
- "learn_tab_announcements": "Announcements",
- "learn_tab_explorer": "Feature Explorer",
- "learn_tab_marketing": "Marketing",
- "learn_our_mission": "Our Mission",
- "learn_articles": "Articles",
- "learn_terms": "Glossary Terms",
- "learn_auth": "Authors",
- "learn_our_desc": "The Library of Alexandria was the world’s first known attempt to create a universal library, one place to store all of the knowledge that existed and could be collected at the time. In fact, the creators of the library once wrote that they wanted to “collect, if possible, all the books in the world.” With that in mind, Popfun has founded Popfun Alexandria. Unlike the Library of Alexandria, which reportedly searched all incoming ships for books to take for its physical collection, Alexandria will house online both content about crypto written by our own researchers.<br><br> While Popfun Alexandria cannot claim to cover all of the existing knowledge of the cryptocurrency space, we are starting our online library with the same lofty goal of those original Library of Alexandria founders back in the second century BCE: \"to collect, if possible, all of the information about cryptocurrency in the world.\"",
- "about_us_title": "Create New World in the Metaverse",
- "about_us_desc": "Founded in 2021, the company's team comes from major blockchain companies and investment institutions. The founders are particularly experienced in overseas market operations and investment. Committed to providing services such as Chain Game Association, Chain Game Data Platform, Chain Game Investment Incubation and other services for the international market. Various branches around the world are under construction, including but not limited to California, Germany, Berlin, Singapore, Hong Kong, London, UK and other places.",
- "au_products_services": "Products & Services",
- "au_ps_t1": "Chain Tour Home",
- "au_ps_desc1": "Publish a chain game data portal website to provide professional chain game data analysis, tracking, research reports, game strategies, IGO information and other one-stop services for guilds, gold owners, players, investment institutions, etc.",
- "au_ps_t2": "investment  management",
- "au_ps_desc2": "Primary market investment for blockchain and metaverse industries.",
- "au_ps_t3": "Chain Game Incubation",
- "au_ps_desc3": "Provide one-stop game chain reform incubation services such as economic model design, blockchain technology, investment, and overseas distribution for traditional game development teams.",
- "au_investors": "Investors",
- "au_partner": "Partner",
- "au_footer_desc": "If you have any questions, please feel free to contact us, and we will reply within 1 to 3 working days.",
- "detail": "Detail",
- "created": "Created",
- "last_updated": "Last Updated",
- "submited_email_reault": "Thanks for signing up! Check your email to confirm your subscription!"
+  "max_supply": "Max Supply",
+  "total_supply": "Total Supply",
+  "overview": "Overview",
+  "market": "Market",
+  "creator": "Creator",
+  "chart_usd_title": "{fullname} to USD Chart",
+  "price_statistics": "{coin} Price Statistics",
+  "price_today": "{fullname} Price Today",
+  "price": "Price",
+  "price_change": "Price Change",
+  "24h_low_high": "24h Low / 24h High",
+  "trading_volume": "Trading Volume",
+  "market_dominance": "Market Dominance",
+  "market_rank": "Market Rank",
+  "price_yesterday": "{fullname} Price Yesterday",
+  "yesterday_lh": "Yesterday's Low / High",
+  "yesterday_oc": "Yesterday's Open / Close",
+  "yesterday_mc": "Yesterday's Market Cap",
+  "yesterday_vol": "Yesterday's Volume",
+  "price_history": "{fullname} Price History",
+  "7d_lh": "7d Low / 7d High",
+  "30d_lh": "30d Low / 30d High",
+  "90d_lh": "90d Low / 90d High",
+  "52w_lh": "52 Week Low / 52 Week High",
+  "all_time_high": "All Time High",
+  "all_time_low": "All Time Low",
+  "coin_roi": "{fullname} ROI",
+  "coin_supply": "{fullname} Supply",
+  "trending_title": "Trending Coins and Tokens",
+  "to_converter": "{coin} to USD Converter",
+  "coin_price_title": "{fullname} Coin Price & Market Data",
+  "coin_price_desc": "<b>{fullname} price</b> today is {currency} with a 24-hour trading volume of {vol}. {symbol} price is up {change} in the last 24 hours. It has a circulating supply of <b>{circulating}</b> {symbol} coins and a total supply of <b>{total}</b>. If you are looking to buy or sell {symbol} a Inu, {exchange} is currently the most active exchange.",
+  "what_is_coin": "What is {fullname} token?",
+  "market_title": "{fullname} Markets",
+  "see_all_markets": "See All Markets",
+  "tip_confidence_indicator": "Confidence Indicator",
+  "th_confidence_tip": "Popfun algorithmically compares the Reported Volume of exchanges against our data model. The Confidence Indicator indicates the level of confidence we have that the Reported Volume is accurate.<br><br> Confidence Indicator reports a number from 0% to 100%, and are categorized into bands:",
+  "news_title": "{fullname} News",
+  "learn_sub_title": "Find what fascinates you as you explore crypto",
+  "learn_email_ph": "Enter your email address",
+  "learn_title_article": "Articles",
+  "learn_title_crypto": "Lost in all the crypto slang?",
+  "learn_subtitle_crypto": "We currently have 861 terms. How many do you know so far?",
+  "learn_about_aamc": "What's new with AAMC?",
+  "learn_tab_all": "All",
+  "learn_tab_announcements": "Announcements",
+  "learn_tab_explorer": "Feature Explorer",
+  "learn_tab_marketing": "Marketing",
+  "learn_our_mission": "Our Mission",
+  "learn_articles": "Articles",
+  "learn_terms": "Glossary Terms",
+  "learn_auth": "Authors",
+  "learn_our_desc": "The Library of Alexandria was the world’s first known attempt to create a universal library, one place to store all of the knowledge that existed and could be collected at the time. In fact, the creators of the library once wrote that they wanted to “collect, if possible, all the books in the world.” With that in mind, Popfun has founded Popfun Alexandria. Unlike the Library of Alexandria, which reportedly searched all incoming ships for books to take for its physical collection, Alexandria will house online both content about crypto written by our own researchers.<br><br> While Popfun Alexandria cannot claim to cover all of the existing knowledge of the cryptocurrency space, we are starting our online library with the same lofty goal of those original Library of Alexandria founders back in the second century BCE: \"to collect, if possible, all of the information about cryptocurrency in the world.\"",
+  "about_us_title": "Create New World in the Metaverse",
+  "about_us_desc": "Founded in 2021, the company's team comes from major blockchain companies and investment institutions. The founders are particularly experienced in overseas market operations and investment. Committed to providing services such as Chain Game Association, Chain Game Data Platform, Chain Game Investment Incubation and other services for the international market. Various branches around the world are under construction, including but not limited to California, Germany, Berlin, Singapore, Hong Kong, London, UK and other places.",
+  "au_products_services": "Products & Services",
+  "au_ps_t1": "Chain Tour Home",
+  "au_ps_desc1": "Publish a chain game data portal website to provide professional chain game data analysis, tracking, research reports, game strategies, IGO information and other one-stop services for guilds, gold owners, players, investment institutions, etc.",
+  "au_ps_t2": "investment  management",
+  "au_ps_desc2": "Primary market investment for blockchain and metaverse industries.",
+  "au_ps_t3": "Chain Game Incubation",
+  "au_ps_desc3": "Provide one-stop game chain reform incubation services such as economic model design, blockchain technology, investment, and overseas distribution for traditional game development teams.",
+  "au_investors": "Investors",
+  "au_partner": "Partner",
+  "au_footer_desc": "If you have any questions, please feel free to contact us, and we will reply within 1 to 3 working days.",
+  "detail": "Detail",
+  "created": "Created",
+  "last_updated": "Last Updated",
+  "submited_email_reault": "Thanks for signing up! Check your email to confirm your subscription!",
+  "addresses": "Addresses",
+  "popularity": "Popularity",
+  "upcoming_event": "Upcoming Event",
+  "submit_latest_project": "Submit the latest project information",
+  "website": "Website",
+  "whitepaper": "Whitepaper",
+  "community": "Community",
+  "explorers": "Explorers",
+  "chain": "Chain",
+  "genre": "Genre",
+  "download_link": "Download link",
+  "language": "Language",
+  "token": "Token",
+  "full_diluter_valuation": "Full  Diluter  Valuation",
+  "information": "Information",
+  "contract_address": "Contract Address",
+  "tip_copy_success": "Copy successfully",
+  "tip_copy_error": "Replication failed"
 }
