feat: 首页行情修改到infor下拉菜单里

--- a/src/lang/en-us/common.json
+++ b/src/lang/en-us/common.json
@@ -33,6 +33,7 @@
   "nav_information": "Information",
   "nav_strategy": "Strategy",
   "nav_learn": "Learn",
+  "nav_market": "Market",
   "nav_about_us": "About us",
   "lang_popular": "Popular languages",
   "lang_all": "All languages",
