--- a/src/lang/en-us/common.json
+++ b/src/lang/en-us/common.json
@@ -10,7 +10,7 @@
   "btn_subscribe": "Subscribe",
   "btn_see_all": "See All",
   "btn_contact_us": "Contact Us",
-  "btn_link_wallet": "Link wallet",
+  "btn_link_wallet": "Connect Wallet",
   "btn_retry": "Retry",
   "list_loading": "Loading...",
   "tag_low": "Low",
