--- a/src/lang/en-us/common.json
+++ b/src/lang/en-us/common.json
@@ -29,12 +29,12 @@
   "nav_home": "Home",
   "nav_igo": "Launch",
   "nav_nft": "NFT Market",
-  "nav_infor": "Infor",
+  "nav_infor": "Info",
   "nav_information": "Information",
   "nav_strategy": "Strategy",
   "nav_learn": "Learn",
   "nav_market": "Markets",
-  "nav_about_us": "About us",
+  "nav_about_us": "About Us",
   "lang_popular": "Popular languages",
   "lang_all": "All languages",
   "menu_game": "Game",
@@ -71,7 +71,7 @@
   "total_raise": "Total Raise",
   "time": "Time",
   "contact_us_t": "Start from PopFun, build up the future web together",
-  "contact_us_desc": "Get crypto analysis, news and updates right to your inbox! Always join the launch of GameFi projects, and get the first hand news, updates and data! Contact us so you don't miss a single moment of GameFi industry.",
+  "contact_us_desc": "<b>Join us to build the future of GameFi together.</b> PopFun is now officially inviting people to push the GameFi industry forward together. Whether you're a developer, an investor, a marketer, or a gamer, contact us now for business inquiries, questions, or to chat!",
   "low": "Low",
   "high": "High",
   "24h": "24h",
